syntax = "proto3";

option java_package = "com.prac.data.datastore";
option java_multiple_files = true;

message Token {
  string access_token = 1;
  string refresh_token = 2;
  bool is_logged_in = 3;
}